Fix overflow scrolling

--- a/src/components/MainApp.css
+++ b/src/components/MainApp.css
@@ -1,7 +1,7 @@
 .App {
   height: 100vh;
   overflow: scroll;
-  -webkit-overflow-scrolling: touch;
+  --webkit-overflow-scrolling: touch;
   scroll-snap-type: y mandatory;
 }
 
